# tita_webots_ros2

./: README.md
gazebo_bridge/: CMakeLists.txt  gazebo_bridge_plugin.xml  package.xml
gazebo_bridge/include/gazebo_bridge/: gazebo_bridge.h
gazebo_bridge/launch/: gazebo_bridge.launch.py
gazebo_bridge/src/: gazebo_bridge.cpp
sim_bringup/: CMakeLists.txt  package.xml
sim_bringup/config/: controllers.yaml
sim_bringup/launch/: sim_bringup.launch.py
template_ros2_controller/: CMakeLists.txt  package.xml  template_ros2_controller_plugin.xml
template_ros2_controller/include/template_ros2_controller/: template_ros2_controller.hpp
template_ros2_controller/src/: template_ros2_controller.cpp  template_ros2_controller_parameters.yaml
titati_webots_bridge/: CMakeLists.txt  README.md  package.xml  webots_bridge_plugin.xml
titati_webots_bridge/include/titati_webots_bridge/: webots_bridge_node.hpp  webots_keyboard.hpp
titati_webots_bridge/launch/: webot_bridge.launch.py  webots_with_arm_launch.py
titati_webots_bridge/meshes/: left_hip.STL  right_hip.STL  right_wheel.STL
titati_webots_bridge/src/: webots_bridge_node.cpp  webots_keyboard.cpp
titati_webots_bridge/urdf/: titati.urdf.xacro  titati_robot_2.urdf  titati_ros2control.xacro
titati_webots_bridge/worlds/: titati.wbt
webots_bridge/: .gitignore  CMakeLists.txt  package.xml  webots_bridge_plugin.xml
webots_bridge/config/: controllers.yaml
webots_bridge/include/webots_bridge/: webots_bridge_node.hpp
webots_bridge/launch/: webots_bridge.launch.py
webots_bridge/src/: webots_bridge_node.cpp
webots_bridge/worlds/: tita.wbt
