<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_bridge</name>
  <version>1.0.0</version>
  <description>Package gazebo simulation of tita</description>
  <maintainer email="liukexin@directdrivetech.com">lkx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>realtime_tools</depend>
  <depend>tita_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
